// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for CULR client. Assert that methods are called with correct params createAccount should call createAccount with correct params 1`] = `
Object {
  "agencyId": "1234",
  "authCredentials": Object {
    "groupIdAut": "12345",
    "passwordAut": "password",
    "userIdAut": "test_create",
  },
  "municipalityNo": "101",
  "userCredentials": Object {
    "userIdType": "CPR",
    "userIdValue": "user",
  },
}
`;

exports[`Tests for CULR client. Assert that methods are called with correct params createAccount should call createAccount without municipalityNo 1`] = `
Object {
  "agencyId": "1234",
  "authCredentials": Object {
    "groupIdAut": "12345",
    "passwordAut": "password",
    "userIdAut": "test_create",
  },
  "userCredentials": Object {
    "userIdType": "CPR",
    "userIdValue": "user",
  },
}
`;
